txs auto checkin

--- a/SM/Homework 4/main.tex
+++ b/SM/Homework 4/main.tex
@@ -552,22 +552,22 @@ We now plot the data gained from the simulation along with the expected asymptot
 }
 \begin{figure}[H]
 	\centering
-	\include{graph1.tex}
+	\input{graph1.tex}
 	\caption{Evolution of throughput $X_0(N)$ as $N$ increases. The point of saturation is $N^{\star}=27.175000$. We can see how the throughput reaches a plateau after the saturation point.}
 \end{figure}
 \begin{figure}[H]
 	\centering
-	\include{graph2.tex}
+	\input{graph2.tex}
 	\caption{Evolution of mean response time $R_0(N)$ as $N$ increases. The point of saturation is $N^{\star}=27.175000$. On the contrary here the response time explodes after the saturation point}
 \end{figure}
 \begin{figure}[H]
 	\centering
-	\include{graph3.tex}
+	\input{graph3.tex}
 	\caption{Behaviour of the average queue length of the four stations.}
 \end{figure}
 \begin{figure}[H]
 	\centering
-	\include{graph4.tex}
+	\input{graph4.tex}
 	\caption{Behaviour of the utilization of the four stations.}
 \end{figure}
 Station 1 (the CPU) is the bottleneck station: we can see how, in comparison to the other stations, the queue becomes infinitely large in average while the other queues converge to a plateau.\\
