--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -91,10 +91,10 @@ In this scenario, due to the memoryless property of the negative exponential dis
 		\end{tikzpicture}
 		\caption{Flowchart of the operations of our simulator.}
 	\end{figure}
-	First of all, we definite a structure to 
-	\begin{ccode}
-		eheh
-	\end{ccode}
+	First of all, we definite a structure to
+\begin{minted}{c}
+#include <stdio.h>
+\end{minted}
 	\section*{Simulation Results for 10 Customers}
 	The simulation gives the following results:
 	
