--- a/SM/Homework 7/defs.tex
+++ b/SM/Homework 7/defs.tex
@@ -18,7 +18,7 @@
 \usepackage{comment}            
 % Commenting
 \usepackage{mathtools}
-\usepackage[outputdir=]{minted}        
+\usepackage{minted}        
 % Highlighted source code. Syntax highlighting
 \usepackage{listings}           
 % Typeset programs (programming code) within LaTeX
