txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -92,7 +92,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 		\caption{Flowchart of the operations of our simulator.}
 	\end{figure}
 	First of all, we definite a structure to
-\begin{minted}{cpp}
+\begin{minted}{c}
 string s = to_string (num);
 \end{minted}
 	\section*{Simulation Results for 10 Customers}
