txs auto checkin

--- a/SM/Homework 7/defs.tex
+++ b/SM/Homework 7/defs.tex
@@ -15,7 +15,8 @@
 % Customize document dimensions
 \usepackage{fullpage}           
 % all 4 margins to be either 1 inch or 1.5 cm
-\usepackage{comment}            
+\usepackage{comment}  
+\usepackage{lgrind}          
 % Commenting
 \usepackage{mathtools}
 \usepackage{minted}        
