txs auto checkin

--- a/SM/Homework 7/defs.tex
+++ b/SM/Homework 7/defs.tex
@@ -18,7 +18,7 @@
 \usepackage{comment}      
 % Commenting
 \usepackage{mathtools}
-\usepackage{minted}        
+\usepackage{minted2}        
 % Highlighted source code. Syntax highlighting
 \usepackage{listings}           
 % Typeset programs (programming code) within LaTeX
