--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -92,7 +92,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 		\caption{Flowchart of the operations of our simulator.}
 	\end{figure}
 	First of all, we definite a structure to handle each entry of our event list:
-	\begin{minted}[linenos,autogobble,breaklines,bgcolor=black!90!blue!80,fontsize=\scriptsize]{c}
+	\begin{minted}{c}
 		typedef struct Event {
 			int machine; // this will identify what machine we are talking about.
 			char type;   // 'A' for Arrival, 'S' for Departure (Short Station), 'L' for
